node_exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  labels:
    metrics: node-exporter
    app: node-exporter
    env: live
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: metrics
    port: 9100
    targetPort: metrics
    protocol: TCP
  selector:
    app: node-exporter
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  labels:
    app: node-exporter
    env: live
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
        env: live
      name: node-exporter
    spec:
      # hostNetwork and hostPID is needed for some node-level metrics like network
      # this means the metrics port is on host and so prometheus need extra-cluster access to all nodes
      hostNetwork: true
      hostPID: true
      containers:
      - image: quay.io/prometheus/node-exporter:v0.13.0
        # disable 'hwmon' since using VM's
        args:
        - "-collector.procfs=/host/proc"
        - "-collector.sysfs=/host/sys"
        - "-collector.filesystem.ignored-mount-points"
        - '^/(sys|proc|dev|host|etc|rootfs/.+)($|/)'
        - "-collectors.enabled"
        - "conntrack,diskstats,entropy,filefd,filesystem,loadavg,mdadm,meminfo,netdev,netstat,sockstat,stat,time,uname,vmstat"
        name: node-exporter
        ports:
        - containerPort: 9100
          hostPort: 9100
          name: metrics
        resources:
          requests:
            memory: 30Mi
            cpu: 100m
          limits:
            memory: 50Mi
            cpu: 200m
        volumeMounts:
        - name: proc
          readOnly:  true
          mountPath: /host/proc
        - name: sys
          readOnly: true
          mountPath: /host/sys
        - name: rootfs
          readOnly: true
          mountPath: /rootfs
      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: sys
        hostPath:
          path: /sys
      - name: rootfs
        hostPath:
          path: /
