prom-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: prometheus
  annotations: 
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: cert-arn
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
spec:
  selector:
    app: prometheus
  ports:
  - name: http
    port: 80
    targetPort: 9090
  type: LoadBalancer
